--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2be7a">  <td>21/03/23 08:46:57</td>   <td>0</td> <td title="&gt;&gt;BaseClass.configsuite()[pri:0, instance:com.interview.swiggy.generic.BaseClass@3c947bc5]">&gt;&gt;configsuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797814020</td>   <td></td> </tr>
-<tr bgcolor="b2be7a">  <td>21/03/23 08:46:57</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configbef()[pri:0, instance:com.interview.swiggy.generic.BaseClass@3c947bc5]">&gt;&gt;configbef</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797814020</td>   <td></td> </tr>
-<tr bgcolor="b2be7a">  <td>21/03/23 08:47:05</td>   <td>8007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethodConfig()[pri:0, instance:com.interview.swiggy.generic.BaseClass@3c947bc5]">&gt;&gt;beforeMethodConfig</td> 
-<td>&nbsp;</td>  <td>main@797814020</td>   <td></td> </tr>
-<tr bgcolor="b2be7a">  <td>21/03/23 08:47:05</td>   <td>8009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseClass.test()[pri:0, instance:com.interview.swiggy.generic.BaseClass@3c947bc5]">test</td> 
-  <td>main@797814020</td>   <td></td> </tr>
-<tr bgcolor="b2be7a">  <td>21/03/23 08:47:05</td>   <td>8020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethodConfig()[pri:0, instance:com.interview.swiggy.generic.BaseClass@3c947bc5]">&lt;&lt;afterMethodConfig</td> 
-<td>&nbsp;</td>  <td>main@797814020</td>   <td></td> </tr>
-<tr bgcolor="b2be7a">  <td>21/03/23 08:47:05</td>   <td>8022</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterClasConfig()[pri:0, instance:com.interview.swiggy.generic.BaseClass@3c947bc5]">&lt;&lt;afterClasConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797814020</td>   <td></td> </tr>
-<tr bgcolor="b2be7a">  <td>21/03/23 08:47:05</td>   <td>8098</td> <td title="&lt;&lt;BaseClass.AfterSuite()[pri:0, instance:com.interview.swiggy.generic.BaseClass@3c947bc5]">&lt;&lt;AfterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797814020</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:52</td>   <td>0</td> <td title="&gt;&gt;BaseClass.configsuite()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">&gt;&gt;configsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:52</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configbef()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">&gt;&gt;configbef</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:57</td>   <td>4665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethodConfig()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">&gt;&gt;beforeMethodConfig</td> 
+<td>&nbsp;</td>  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:57</td>   <td>4666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseClass.test()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">test</td> 
+  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:57</td>   <td>4680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethodConfig()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">&lt;&lt;afterMethodConfig</td> 
+<td>&nbsp;</td>  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:57</td>   <td>4682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethodConfig()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">&gt;&gt;beforeMethodConfig</td> 
+<td>&nbsp;</td>  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="7bacdf">  <td>21/03/23 15:41:57</td>   <td>4683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample1.main()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">main</td> 
+  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:57</td>   <td>5010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethodConfig()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">&lt;&lt;afterMethodConfig</td> 
+<td>&nbsp;</td>  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:57</td>   <td>5012</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterClasConfig()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">&lt;&lt;afterClasConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309238149</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/03/23 15:41:57</td>   <td>5085</td> <td title="&lt;&lt;BaseClass.AfterSuite()[pri:0, instance:com.interview.swiggy.testcases.Sample1@68e965f5]">&lt;&lt;AfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309238149</td>   <td></td> </tr>
 </table>
